# tu_dentista

./: .env.dist  .flake8  Dockerfile  Makefile  README.md  docker-compose.yaml  docker.env  manage.py  pyproject.toml  requirements.txt  run-django.sh  run-uvicorn.sh  run.sh
apps/core/: apps.py  core_constants.py
apps/core/admin/: __init__.py  auth_user.py  city.py  country.py  zone.py
apps/core/api/: user_attachment.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  auth_user.py  city.py  country.py  zone.py
apps/core/schema/: api.py
apps/core/urls/: __init__.py  professional.py  professional_api_rest.py  user.py
apps/core/views/: __init__.py  commons.py  interfaces.py  professional_retrieve.py  professional_search.py  user_register.py
apps/psychology/: apps.py  psychology_constants.py
apps/psychology/adapters/: admin_email_notification.py  carreer.py  city.py  (+11 more)
config/: asgi.py  enviroment_vars.py  urls.py  wsgi.py
config/settings/: base.py  production.py
static/base/: home.js  professional_retrieve.js  professional_search.js  user_register.js
staticfiles/base/: commons.js  coordenadas.js  home.js  professional_retrieve.js  professional_search.js  user_register.js
templates/: home.html
templates/base/: base.html  clean_navbar.html  content.html  footer.html  navbar.html
templates/core/: professional_retrieve.html  professional_search.html  user_register.html
utils/: adapter.py  database.py  decorators.py  enums.py  models.py  send_email.py  upload_files.py
utils/graph/: enums.py  interfaces.py  responses.py
(+70 files in other folders)
